--- a/eureka-server/pom.xml
+++ b/eureka-server/pom.xml
@@ -11,11 +11,16 @@
     <name>eureka-server</name>
     <description>Demo project for Spring Boot</description>
 
-    <parent>
+    <!--<parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>2.0.4.RELEASE</version>
-        <relativePath/> <!-- lookup parent from repository -->
+        <relativePath/> &lt;!&ndash; lookup parent from repository &ndash;&gt;
+    </parent>-->
+    <parent>
+        <groupId>com.forezp</groupId>
+        <artifactId>sc-f-chatper</artifactId>
+        <version>0.0.1-SNAPSHOT</version>
     </parent>
 
     <properties>
